# tree-sitter-dsl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.txt  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.txt  tree-sitter.json
bindings/c/: tree-sitter-taint-summary.pc.in
bindings/c/tree_sitter/: tree-sitter-taint-summary.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_taint_summary/: __init__.py  binding.c
bindings/python/tree_sitter_test/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTaintSummaryTests/: TreeSitterTaintSummaryTests.swift
bindings/swift/TreeSittertestTests/: TreeSittertestTests.swift
src/: grammar.json  node-types.json  parser.c
tools/error-handling/: error_extractor.js  error_reporter.js  error_visualizer.js  index.js  package-lock.json  package.json  run_tests.js  web_interface.js
tools/error-handling/public/: style.css
tools/error-handling/test-cases/: invalid_key.txt  missing_closing_brace.txt  missing_comma.txt  missing_paren.txt  unknown_operation.txt
tools/error-handling/views/: index.ejs
